Knife Project fails to cut circles into a mesh #43229

Closed
opened 2015-01-12 20:50:14 +01:00 by Francesco Bruno · 11 comments

System Information
Win 8.1 PRO i7 3770K R9 290X
MacBook pro Retina 2013 i7 4770 GTX 630

Blender Version
Broken: All the versions after ( and included ) 2.73 RC d7e4944
Working: All the versions before 2.73 RC

Short description of error

Knife Project does not work, in some simple cases produce an incorrect result

Exact steps for others to reproduce the error

New Project => Add plane => Add Circle => Select first the circle then the plane => Enter edit mode => Knife Project

**System Information** Win 8.1 PRO i7 3770K R9 290X MacBook pro Retina 2013 i7 4770 GTX 630 **Blender Version** Broken: All the versions after ( and included ) 2.73 RC d7e4944 Working: All the versions before 2.73 RC **Short description of error** Knife Project does not work, in some simple cases produce an incorrect result **Exact steps for others to reproduce the error** New Project => Add plane => Add Circle => Select first the circle then the plane => Enter edit mode => Knife Project

Changed status to: 'Open'

Changed status to: 'Open'
Francesco Bruno self-assigned this 2015-01-12 20:50:14 +01:00

Added subscriber: @b.frenc

Added subscriber: @b.frenc
Francesco Bruno removed their assignment 2015-01-12 20:51:59 +01:00
Member

Added subscribers: @ideasman42, @JulianEisel

Added subscribers: @ideasman42, @JulianEisel
Member

Cannot confirm that here. Can you attach a screenshot and a .blend showing the issue?

@ideasman42, Is that something you heard of before?

Cannot confirm that here. Can you attach a screenshot and a .blend showing the issue? @ideasman42, Is that something you heard of before?

Here you go:

2.72 Behavior: (correct)
bug1.png

2.73 Behavior:
bug2.png

Following exactly the steps i mentioned above

Here you go: 2.72 Behavior: (correct) ![bug1.png](https://archive.blender.org/developer/F136842/bug1.png) 2.73 Behavior: ![bug2.png](https://archive.blender.org/developer/F136844/bug2.png) Following exactly the steps i mentioned above
Member

Mhh indeed, checked again with latest master and it happens

Mhh indeed, checked again with latest master and it happens
Campbell Barton was assigned by Julian Eisel 2015-01-12 22:07:05 +01:00
Campbell Barton changed title from Knife Project not working to Knife Project fails to cut circles into a mesh 2015-01-13 07:05:02 +01:00

This is caused by fix for #42864, looking into a fix which can support both.

This is caused by fix for #42864, looking into a fix which can support both.

This issue was referenced by b77dd13004

This issue was referenced by b77dd130044c43fd12a3ce4adf645ef88d871a50

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b77dd13004.

Closed by commit b77dd13004.

This issue was referenced by e51d7f1fb3

This issue was referenced by e51d7f1fb369ae544cd4d78256b5f5e63fce69f1
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43229
No description provided.