Fix T43229: Knife-project regression (broke knife-project)

There have been quite a few issues with knife precision,
tested reports (T43229, T42864, T42459, T41164) and this works with all.